cmake_minimum_required(VERSION 3.13)
project(link_list)

add_executable(link_list p38_1.cpp)
add_executable(p38_2 p38_2.cpp)
add_executable(p38_3 p38_3.cpp)
add_executable(p38_4 p38_4.cpp)
add_executable(p38_5 p38_5.cpp)
add_executable(p38_6 p38_6.cpp)
add_executable(p38_7 p38_7.cpp)
add_executable(p38_8 p38_8.cpp)
add_executable(p38_9 p38_9.cpp)
add_executable(p38_10 p38_11.cpp)
add_executable(p38_11 p38_12.cpp)
add_executable(p38_12 p38_13.cpp)
add_executable(p38_13 p38_14.cpp)
add_executable(p38_14 p38_15.cpp)
add_executable(p38_15 p38_16.cpp)
add_executable(p38_16 p38_17.cpp)
add_executable(p38_17 p38_18.cpp)
add_executable(p38_18 p38_19.cpp)
add_executable(p38_20 p38_20.cpp)
add_executable(p38_21 p38_21.cpp)
add_executable(p38_22 p38_22.cpp)
add_executable(p38_23 p38_23.cpp)


target_link_libraries(link_list STL)