cmake_minimum_required(VERSION 3.13)
project(sequence)

add_executable(sequence p18_1.cpp)
add_executable(p18_2 p18_2.cpp)
add_executable(p18_3 p18_3.cpp)
add_executable(p18_4 p18_4.cpp)
add_executable(p18_5 p18_5.cpp)
add_executable(p19_6 p18_6.cpp)
add_executable(p19_7 p18_7.cpp)
add_executable(p19_8 p18_8.cpp)
add_executable(p19_9 p18_9.cpp)
add_executable(p19_10 p18_10.cpp)
add_executable(p19_11 p18_11.cpp)
add_executable(p19_12 p18_12.cpp)
add_executable(p19_13 p18_13.cpp)
target_link_libraries(sequence STL)
